# python-example-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  publish.yml  release.yml
src/endstone_example/: __init__.py  command.py  config.toml  example_listener.py  example_plugin.py  listener.py  plugin.py  python_command.py  test_command.py
src/endstone_example_plugin/: __init__.py  example_plugin.py
src/endstone_plugin/: __init__.py
src/endstone_python_example_plugin/: __init__.py  example_plugin.py
